@@ -332,7 +332,9 @@ class Response:
         # use prefetcher
         if job.usePrefetcher():
             self.data['usePrefetcher'] = 'True'
-
+        # IO
+        self.data['ioIntensity'] = job.get_task_attribute('ioIntensity')
+        self.data['ioIntensityUnit'] = job.get_task_attribute('ioIntensityUnit')
 
 
     # set proxy key
