@@ -1,5 +1,9 @@
 Release Notes
 
+* 10/22/2018
+  * sending ioIntensity
+  * fixed ppE for maxAttempt
+
 * 10/16/2018
   * added decAttOnFailedES
 
